+ sample plt script, refactor of config->util

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,7 @@ thesis_tools/config/__pycache__/*.pyc
 /results/
 /interactive_plots/*.html
 /poster/figures/drawio/*.bkp
+figures/
+poster/poster_content.org_archive
+scripts/*.h5
+scripts/experiment_log.txt
